--- a/index.html
+++ b/index.html
@@ -1,16 +1,194 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>About Me</title>
-</head>
-<body>
-<h1>About Me</h1>
-<p><b>Name:</b> Armelyn D. Macedonio</p>
-<p><b>Birthday:</b> February 20, 2003</p>
-<p><b>Address:</b> Saguing, Mabini, Batangas</p>
-<p><b>School:</b> Batangas State University The NEU Mabini Campus</p>
-<p><b>Course:</b> Bachelor of Science in Information Technology Major in Service
-Management</p>
-<p><b>Hobbies:</b> I like watching movies and sleeping</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Armelyn Portfolio</title>
+
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- ===== NAVBAR ===== -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold text-purple" href="#">Armelyn M.</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
+            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+            <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link">Contacts</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- ===== HERO SECTION ===== -->
+    <section id="home" class="hero-section d-flex align-items-center text-center text-lg-start">
+      <div class="container d-flex flex-wrap align-items-center justify-content-between">
+        <div class="hero-text col-lg-6">
+          <p class="intro">Hey, I'm <span class="fw-semibold text-purple">Armelyn</span></p>
+          <h1><span class="highlight text-purple">Frontend</span> Developer</h1>
+          <p class="text-muted mt-3">
+            I’m a frontend developer who enjoys creating clean and easy-to-use
+            websites that deliver smooth user experiences.
+          </p>
+          <div class="mt-4">
+            <a href="#contact" class="btn btn-dark me-2">Get in Touch</a>
+            <a href="#projects" class="btn btn-outline-dark">Browse Projects</a>
+          </div>
+        </div>
+        <div class="hero-image col-lg-5 text-center mt-5 mt-lg-0">
+          <img src="profile.jpg" alt="Profile" class="profile-pic shadow-lg" />
+        </div>
+      </div>
+    </section>
+
+    <!-- ===== ABOUT ===== -->
+    <section id="about" class="section-padding bg-light text-center">
+      <div class="container">
+        <h2 class="fw-bold text-purple mb-3">About Me</h2>
+        <p class="mx-auto" style="max-width: 700px;">
+          I’m passionate about building elegant, user-friendly interfaces. With experience
+          in HTML, CSS, JavaScript, and frameworks like React, I strive to craft web
+          experiences that are responsive, accessible, and visually pleasing.
+        </p>
+      </div>
+    </section>
+
+    <!-- ===== PROJECTS ===== -->
+   <section id="projects" class="section-padding text-center">
+  <div class="container">
+    <h2 class="fw-bold text-purple mb-3">Projects</h2>
+    <p class="text-muted mb-5">Here are some of my favorite works.</p>
+    <div class="row g-4">
+      
+      <div class="col-md-4">
+        <a href="https://github.com/armelyn15/Mabini-Tourist-Spot.git" target="_blank" class="text-decoration-none text-dark">
+          <div class="project-card p-4 shadow-sm rounded h-100">
+            <h5>Mabini Tourism Spot</h5>
+            <p>Shows the beautiful tourist spots in Mabini, Batangas.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a href="https://github.com/armelyn15/About-Me-Portfolio.git" target="_blank" class="text-decoration-none text-dark">
+          <div class="project-card p-4 shadow-sm rounded h-100">
+            <h5>My Portfolio</h5>
+            <p>A minimalist portfolio built with HTML, CSS, and JavaScript.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <a href="https://github.com/armelyn15/Filesystem-Management---user-and-group-management.git" target="_blank" class="text-decoration-none text-dark">
+          <div class="project-card p-4 shadow-sm rounded h-100">
+            <h5>Linux User and Group Management</h5>
+            <p>Created Linux admin and staff users with access controls.</p>
+          </div>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+    <!-- ===== EXPERIENCE ===== -->
+<section id="experience" class="section-padding experience-bg text-center">
+  <div class="container">
+    <h2 class="fw-bold text-purple mb-3">Experience</h2>
+    <p class="text-muted mb-5">My academic and professional milestones.</p>
+    <div class="row g-4 justify-content-center">
+      <div class="col-md-4">
+        <div class="project-card p-4 shadow-sm rounded h-100">
+          <h5>College Level</h5>
+          <h6>Batangas State University TNEU</h6>
+          <p>2023 - Present</p>
+          <p>Learned basic programming, design, and digital skills</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="project-card p-4 shadow-sm rounded h-100">
+          <h5>Senior High School Graduate</h5>
+          <h6>Anselmo A. Sandoval MNHS</h6>
+          <p>2020-2021 | ICT Strand</p>
+          <p>Currently taking BS Information Technology</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <!-- ===== CONTACT ===== -->
+<section id="contact" class="section-padding text-center">
+  <div class="container">
+    <h2 class="fw-bold text-purple mb-3">Contacts</h2>
+    <p class="mt-3 mb-4 text-muted">Let’s connect and build something great together!</p>
+<div class="row g-3">
+    <div class="col-md-4">
+      <div class="p-3 skill-box">
+        <h6><i class="fa-solid fa-envelope-open"></i> EMAIL</h6>
+        <p>armelynmacedonio133@gmail.com</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="p-3 skill-box">
+        <h6><i class="fa-solid fa-phone"></i> TELEPHONE</h6>
+        <p>+63 910 412 8998</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="p-3 skill-box">
+        <h6><i class="fa-solid fa-house"></i> LOCATION</h6>
+        <p>Batangas City, Philippines</p>
+      </div>
+    </div>
+
+    <!-- Social Icons -->
+    <div class="social-icons mt-4">
+  <a href="https://github.com/yourusername" target="_blank">
+    <i class="fab fa-github"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/yourusername" target="_blank">
+    <i class="fab fa-linkedin"></i>
+  </a>
+</div>
+</section>
+
+    <!-- ===== FOOTER ===== -->
+    <footer class="text-center py-3 bg-white">
+      <p class="text-muted mb-0">© 2025 Armelyn D. All rights reserved.</p>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="script.js"></script>
+  </body>
 </html>
